# RayTracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: render.ppm  render0_0.ppm
doc/: image.doxy
doc/html/: Camera_8h_source.html  ComplexObjectIntersect_8h_source.html  ComplexObjectSubstract_8h_source.html  ComplexObjectUnion_8h_source.html  ComplexObject_8h_source.html  Cube_8h_source.html  Light_8h_source.html  Material_8h_source.html  Matrix4x4_8h_source.html  Matrix_8h_source.html  Object_8h_source.html  Plane_8h_source.html  Ray_8h_source.html  Renderer_8h_source.html  SceneManager_8h_source.html  Sphere_8h_source.html  Vector_8h_source.html  Vector__2_8h_source.html  annotated.html  classCamera-members.html  classCamera.html  classCamera__coll__graph.dot  classCamera__coll__graph.map  classCamera__coll__graph.md5  classComplexObject-members.html  classComplexObject.html  classComplexObjectIntersect-members.html  classComplexObjectIntersect.html  classComplexObjectIntersect__coll__graph.dot  (+128 more)
src/: Camera.cpp  Camera.h  ComplexObject.cpp  ComplexObject.h  ComplexObjectIntersect.cpp  ComplexObjectIntersect.h  ComplexObjectSubstract.cpp  ComplexObjectSubstract.h  ComplexObjectUnion.cpp  ComplexObjectUnion.h  Cube.cpp  Cube.h  Light.cpp  Light.h  Material.cpp  Material.h  Matrix.h  Matrix4x4.cpp  Matrix4x4.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Sphere.cpp  Sphere.h  Vector.cpp  Vector.h  Vector_2.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+41 files in other folders)
